# hw2

./: .gitignore  README.md  pyproject.toml
experiments/: Exp1_Baseline_Scratch_metrics.csv  Exp2_Baseline_Pretrained_metrics.csv  Exp3_Attention_SEBlock_metrics.csv  Exp4_Hparam_LowerLR_metrics.csv  Exp5_Hparam_HigherLR_metrics.csv
experiments/task3/: task3_unet_ce_dice_metrics.csv  task3_unet_ce_metrics.csv  task3_unet_dice_metrics.csv
task1_pet_classification/: dataset.py  models.py  plot_results.py  train.py
task2_detection_tracking/: convert_visdrone_to_yolo.py  extract_occlusion_frames.py  line_count.py  track_video.py  train.py  visdrone.yaml
task3_segmentation/: dataset.py  models.py  train.py
