[project]
name = "hw2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lap>=0.5.13",
    "matplotlib>=3.10.9",
    "opencv-python>=4.9.0",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "ultralytics>=8.3.0",
    "wandb>=0.27.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
